Fixed alignment that was bothering me

--- a/style.css
+++ b/style.css
@@ -32,6 +32,10 @@ header {
    
 }
 
+.header-text {
+    margin-left: 3%;
+}
+
 main {
     background-color: white;
     font: 16px "Open Sans", serif;
